fix footer on mobile

--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -1,4 +1,3 @@
-$gap: 60px;
 footer {
   background-color: var(--mui-palette-background-paper);
   width: 100%;
@@ -7,7 +6,7 @@ footer {
   $border-radius: 10px;
   border-top-right-radius: $border-radius;
   border-top-left-radius: $border-radius;
-  gap: $gap;
+  gap: 40px;
 
   .cols {
     width: 100%;
@@ -15,7 +14,7 @@ footer {
     justify-content: space-around;
     padding: 0 20svw;
     flex-wrap: wrap;
-    gap: $gap 3svw;
+    gap: 30px 6svw;
 
     .MuiBox-root {
       height: fit-content;
